TrialoftheTitansPackage/main/default/objects/Equivalency__c/Equivalency__c.object-meta.xml
<CustomObject>
    <label>Equivalency</label>
    <nameField>
        <label>Equivalency</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equivalencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>