TrialoftheTitansPackage/main/default/objects/Equivalency__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Equivalencies</relationshipLabel>
    <relationshipName>Equivalencies</relationshipName>
    <type>Lookup</type>
</CustomField>