TrialoftheTitansPackage/main/default/objects/Equivalency__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>Equivalencies</relationshipLabel>
    <relationshipName>Equivalencies</relationshipName>
    <type>Lookup</type>
</CustomField>