TrialoftheTitansPackage/main/default/objects/Equivalency__c/fields/Skill_Equivalency__c.field-meta.xml
<CustomField>
    <fullName>Skill_Equivalency__c</fullName>
    <label>Skill Equivalency</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>